Implement complete Next.js MVP with landing, scanning, and results pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/
 .env
+.env.local
 .DS_Store
 *.log
 npm-debug.log*
@@ -7,3 +8,7 @@ yarn-debug.log*
 yarn-error.log*
 .vscode/
 .idea/
+.next/
+out/
+build/
+dist/
