--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-# Example environment variables
+AIzaSyADJ6VWnBqeqmYi35kb-A8xa_PCoedz7b4# Example environment variables
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
